--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta name="author" content="" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
   <link rel="stylesheet" href="./files/style.css" />
+  <link rel="stylesheet" href="./files/style2.css" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <title>Ville Savolainen</title>
@@ -38,8 +39,61 @@
   </script>
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+<body data-spy="scroll" data-target=".navbar-fixed-top">
+  <div class="container">
+    <div class="content">
+      <h1>Hääaikataulu</h1>
+      <div class="texts">
+        <div class="textitem">
+          <p class="header">klo 11.00 Toni hakee Villen</p>
+        </div>
+        <div class="blank"></div>
+        <div class="textitem">
+          <p class="header">klo 12.30 First look -kuvat kirkon alueella</p>
+        </div>
+        <div class="blank"></div>
+        <div class="textitem">
+          <p class="header">klo 14.00 vihkiminen</p>
+          <p>- hyvä olla paikalla vähän ennen</p>
+          <p>- viehien kiinnitys</p>
+          <p>- sormukset Tatulle</p>
+          <p>- Konsta? lukee pätkän raamatusta</p>
+        </div>
+        <div class="blank"></div>
+        <div class="textitem">
+          <p class="header">klo 14.30 Hääauto hakee, siirrytään juhlapaikalle =></p>
+        </div>
+        <div class="blank"></div>
+        <div class="textitem">
+          <p class="header">klo 15.30 Alkumaljat</p>
+          <p>- bestmanit toivottaa vieraat tervetulleeksi</p>
+          <p>- spotify-lista voi soida taustalla (kaasot/bestmanit hoitaa)</p>
+        </div>
+        <div class="blank"></div>
+        <div class="textitem">
+          <p class="header">klo 16.30 Ruoka</p>
+          <p>- ennen ruokaa/jossain välissä yleistä ohjeistusta</p>
+          <p>- ruokailua n.3 tuntia</p>
+          <p>- ruoan jälkeen puheet</p>
+          <p>- valokuvien otto (kaasot, bestmanit, ym. yhteiskuvia</p>
+          <p>- kenkäleikki (kaasot hoitaa)</p>
+        </div>
+        <div class="blank"></div>
+        <div class="textitem">
+          <p class="header">klo 19.30 Kahvi</p>
+        </div>
+        <div class="blank"></div>
+        <div class="textitem">
+          <p class="header">Kahvin jälkeen</p>
+          <p>- Bändin eka setti (häätanssi ym.)</p>
+          <p>- taukoa -> kimpun/sukkanauhan heitto</p>
+          <p>- Loppuaika rentoa yhdessäoloa (bändiltä vielä 2 settiä)</p>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand page-scroll" href="#page-top">
@@ -189,7 +243,7 @@
   <footer></footer>
   <script src="files/jquery.js"></script>
   <script src="files/bootstrap.js"></script>
-  <script src="https://use.fontawesome.com/4cb3f7636f.js"></script>
+  <script src="https://use.fontawesome.com/4cb3f7636f.js"></script> -->
 </body>
 
 </html>
