--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="blank"></div>
         <div class="textitem">
-          <p class="header">klo 14.30 Hääauto hakee, siirrytään juhlapaikalle =></p>
+          <p class="header">klo 14.30 Hääauto hakee, juhlapaikalle =></p>
         </div>
         <div class="blank"></div>
         <div class="textitem">
