--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <p class="header">klo 14.00 vihkiminen</p>
           <p>- hyvä olla paikalla vähän ennen</p>
           <p>- viehien kiinnitys</p>
-          <p>- sormukset Tatulle</p>
+          <p>- Tatu antaa sormukset</p>
           <p>- Konsta? lukee pätkän raamatusta</p>
         </div>
         <div class="blank"></div>
