--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
           <p>- Konsta? lukee pätkän raamatusta</p>
         </div>
         <div class="blank"></div>
+        <div class="blank"></div>
+        <div class="blank"></div>
         <div class="textitem">
           <p class="header">klo 14.30 Hääauto hakee, juhlapaikalle =></p>
         </div>
@@ -70,14 +72,18 @@
           <p>- spotify-lista voi soida taustalla (kaasot/bestmanit hoitaa)</p>
         </div>
         <div class="blank"></div>
+        <div class="blank"></div>
+        <div class="blank"></div>
         <div class="textitem">
           <p class="header">klo 16.30 Ruoka</p>
           <p>- ennen ruokaa/jossain välissä yleistä ohjeistusta</p>
           <p>- ruokailua n.3 tuntia</p>
           <p>- ruoan jälkeen puheet</p>
-          <p>- valokuvien otto (kaasot, bestmanit, ym. yhteiskuvia</p>
+          <p>- valokuvien otto (kaasot, bestmanit, ym. yhteiskuvia)</p>
           <p>- kenkäleikki (kaasot hoitaa)</p>
         </div>
+        <div class="blank"></div>
+        <div class="blank"></div>
         <div class="blank"></div>
         <div class="textitem">
           <p class="header">klo 19.30 Kahvi</p>
