--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <div class="blank"></div>
         <div class="blank"></div>
         <div class="textitem">
-          <p class="header">klo 14.30 Hääauto hakee, juhlapaikalle =></p>
+          <p class="header">klo 14.30 Hääauto paikalla</p>
+          <p>- siirtyminen juhlapaikalle</p>
         </div>
         <div class="blank"></div>
         <div class="textitem">
